Thu May 06 16:06:55 2004  George Lebl <jirka@5z.com>

	* Release 2.6.0.2

Thu May 06 15:56:36 2004  George Lebl <jirka@5z.com>

	* configure.in: raise version, disable IPv6 by default, it's still
	  problematic and most use cases are IPv4 nowdays anyway.

Thu May 06 15:33:01 2004  George Lebl <jirka@5z.com>

	* daemon/verify-pam.c, daemon/slave.[ch]: Fix #119853 thanks to
	  investigation by Frederic Crozat.  PAM sometimes doesn't
	  go away after we tell it to and keeps asking questions even though
	  we want it to shut up and die.  So just keep telling it until
	  we succeed in pissing it off enough to go away.  Also
	  change the name of the _should_complain function to _action_pending
	  since that's more appropriate

Thu May 06 15:18:07 2004  George Lebl <jirka@5z.com>

	* daemon/verify-pam.c: attempt to fix #126984 and possibly others
	  where pam asks for the username AGAIN even though we gave it
	  a username.  PAM is on crack.  Just attempt to detect it and
	  give it the username without asking the user for it.

Thu May 06 09:59:48 2004  George Lebl <jirka@5z.com>

	* gui/misc.[ch], gui/gdmlogin.c, gui/gdmsetup.c,
	  gui/gdmchooser.c, gui/greeter/greeter.c: Apply and heavily
	  massage a patch from Muktha to add font setting to the theming
	  and finally fix #125070 hopefully 

	* daemon/misc.c: our gethostent should strip the ::ffff: since it's
	  confusing to rest of gdm and X in particular apparently, so whack
	  it from the hostname so that it doesn't get into the display
	  name.  Should fix #133246

	* gui/gdmlogin.c, gui/greeter/greeter_item_pam.c: fix #123958
	  by having an empty message clear the message string rather then
	  append an empty string.  Evil, but it fixes the bug.  PAM is one
	  large bug in fact, and would require a rather large flywatter to
	  fix, based on a patch from Frederic Crozat

Tue May 04 09:47:21 2004  George Lebl <jirka@5z.com>

	* daemon/display.c: Don't whack the socket_conn on display_manage