@@ -41,3 +41,4 @@ gdm-stop
 gdm-restart
 gdm-safe-restart
 gdmsetup-security
+autom4te.cache
