@@ -12,3 +12,4 @@ Default
 gnome.desktop
 Default.desktop
 CDE.desktop
+default.desktop
