@@ -705,6 +705,9 @@ gui/modules/AccessKeyMouseEvents
 gui/modules/AccessDwellMouseEvents
 utils/Makefile
 pixmaps/Makefile
+pixmaps/16x16/Makefile
+pixmaps/32x32/Makefile
+pixmaps/48x48/Makefile
 config/Makefile
 po/Makefile.in
 vicious-extensions/Makefile
