@@ -1,3 +1,4 @@
 Makefile
 Makefile.in
 *.out
+omf_timestamp
