@@ -7,7 +7,7 @@ _Comment=Log in as another user inside a nested window
 # this is minorly evil
 TryExec=Xnest
 Exec=gdmflexiserver --xnest
-Icon=gdm.png
+Icon=gdm-xnest
 Terminal=false
 Type=Application
 Categories=Application;System;
