@@ -4,7 +4,7 @@ _Name=New Login
 _GenericName=New Login
 _Comment=Log in as another user without logging out
 Exec=gdmflexiserver
-Icon=gdm.png
+Icon=gdm
 Terminal=false
 Type=Application
 Categories=Application;System;
