@@ -5,7 +5,7 @@ _GenericName=Login Screen Setup
 _Comment=A graphical application for configuring the GNOME Display Manager (GDM)
 TryExec=gdmsetup
 Exec=gdmsetup
-Icon=gdm.png
+Icon=gdm-setup
 StartupNotify=true
 Terminal=false
 Type=Application
