@@ -1,4 +1,2 @@
 Makefile
 Makefile.in
-*.out
-omf_timestamp
