@@ -1,0 +1,13 @@
+# This file will be processed with automake-1.7 to create Makefile.in
+
+appsicondir = \
+	$(datadir)/icons/hicolor/32x32/apps
+appsicon_DATA = \
+	gdm-setup.png \
+	gdm-xnest.png
+
+EXTRA_DIST = \
+	$(appsicon_DATA)
+
+MAINTAINERCLEANFILES = \
+	Makefile.in
