@@ -1,0 +1,14 @@
+# This file will be processed with automake-1.7 to create Makefile.in
+
+appsicondir = \
+	$(datadir)/pixmaps
+appsicon_DATA = \
+	gdm.png \
+	gdm-xnest.png \
+	gdm-setup.png
+
+EXTRA_DIST = \
+	$(appsicon_DATA)
+
+MAINTAINERCLEANFILES = \
+	Makefile.in
