@@ -1,6 +1,10 @@
+
+SUBDIRS = \
+	16x16 32x32 48x48
+
 pixmapdir = $(datadir)/pixmaps
 
-BITMAPS = gdm.png gdm-foot-logo.png nobody.png nohost.png
+BITMAPS = gdm-foot-logo.png nobody.png nohost.png
 
 pixmap_DATA = $(BITMAPS)
 
