@@ -5,3 +5,4 @@ Makefile.in
 gdmaskpass
 gdmopen
 gdmmktemp
+gdmtranslate
