@@ -1,3 +1,13 @@
+Wed May 12 20:36:33 2004  James M. Cape <jcape@ignore-your.tv>
+
+	* */.cvsignore: Updates.
+	* configure.in, pixmaps/Makefile.am, pixmaps/*/*: Added new icons for
+	  gdmflexiserver -xnest and gdmsetup. The old pixmaps stay in pixmaps
+	  because they are not "themed-icons" per-se.
+	* pixmaps/gdm.png: Removed the old icon.
+	* gui/gdmsetup.desktop.in, gui/gdmflexiserver*.desktop.in: Use the new
+	  icons.
+
 Thu May 06 16:06:55 2004  George Lebl <jirka@5z.com>
 
 	* Release 2.6.0.2
